@@ -11,17 +11,22 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.math.BigInteger;
-import java.util.List;
+import java.util.Collections;
 
 @RequiredArgsConstructor
 @RequestMapping("/api/v1/categories")
 @RestController
 public class CategoryController {
     private final CategoryService categoryService;
+    private final CategoryDTOMapper categoryDTOMapper;
 
     @GetMapping
     public CategoryResponse getCategories() {
-        var categoryDTOList = categoryService.fetchAllCategories();
+        var categoryDTOList = categoryService
+                .fetchAllCategories()
+                .stream()
+                .map(categoryDTOMapper)
+                .toList();
 
         return new CategoryResponse(
                 HttpStatus.OK.value(),
@@ -34,7 +39,11 @@ public class CategoryController {
     public CategoryResponse getCategoryByID(
             @PathVariable("categoryID") BigInteger categoryID
     ) {
-        var categoryDTOList = List.of(categoryService.fetchCategoryByID(categoryID));
+        var categoryDTOList = Collections.singletonList(
+                categoryDTOMapper.apply(
+                        categoryService.fetchCategoryByID(categoryID)
+                )
+        );
 
         return new CategoryResponse(
                 HttpStatus.OK.value(),
@@ -53,7 +62,9 @@ public class CategoryController {
             throw new RequestValidationException(errors);
         }
 
-        var categoryDTOList = List.of(categoryService.addCategory(request));
+        var categoryDTOList = Collections.singletonList(
+                categoryDTOMapper.apply(categoryService.addCategory(request))
+        );
 
         return new CategoryResponse(
                 HttpStatus.OK.value(),
@@ -86,7 +97,11 @@ public class CategoryController {
             throw new RequestValidationException(errors);
         }
 
-        var categoryDTOList = List.of(categoryService.updateCategory(categoryID, request));
+        var categoryDTOList = Collections.singletonList(
+                categoryDTOMapper.apply(
+                        categoryService.updateCategory(categoryID, request)
+                )
+        );
 
         return new CategoryResponse(
                 HttpStatus.OK.value(),
